💄[MOD] 테이블 뷰 아이템 이미지 수정

--- a/Carrot_Market_iOS/Carrot_Market_iOS/Sources/CarrotMarket/Cells/TVC/ItemTVC.xib
+++ b/Carrot_Market_iOS/Carrot_Market_iOS/Sources/CarrotMarket/Cells/TVC/ItemTVC.xib
@@ -16,7 +16,7 @@
                 <rect key="frame" x="0.0" y="0.0" width="375" height="145"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="DM0-4X-Z9U">
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="DM0-4X-Z9U">
                         <rect key="frame" x="14" y="15" width="115" height="115"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="115" id="74i-Ey-Zk8"/>
